--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -2,68 +2,148 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MM Courier Dashboard</title>
+  <title>Dashboard | MM Courier</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     :root {
-      --primary: #0a2b52;
-      --accent: #409dbc;
-      --highlight: #cebd80;
-      --bg: #ffffff;
+      --gold: #cebd80;
+      --navy: #0a2b52;
+      --sky: #409dbc;
+      --white: #ffffff;
     }
 
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', sans-serif;
+      box-sizing: border-box;
     }
 
     body {
+      font-family: 'Segoe UI', sans-serif;
       display: flex;
-      background: var(--bg);
-    }
-
-    .sidebar {
-      width: 250px;
-      background: var(--primary);
-      color: #fff;
       height: 100vh;
-      padding: 20px;
-      position: fixed;
-      transition: width 0.3s;
+      overflow: hidden;
+      background-color: var(--white);
     }
 
-    .sidebar.collapsed {
-      width: 60px;
+    /* Sidebar */
+    .sidebar {
+      width: 220px;
+      background-color: var(--navy);
+      color: var(--white);
+      display: flex;
+      flex-direction: column;
+      padding: 20px 0;
     }
 
     .sidebar h2 {
-      font-size: 1.5em;
-      margin-bottom: 30px;
+      text-align: center;
+      margin-bottom: 20px;
+      color: var(--gold);
     }
 
     .sidebar a {
-      display: block;
-      padding: 12px;
-      margin-bottom: 10px;
-      color: #fff;
+      color: var(--white);
       text-decoration: none;
-      border-radius: 4px;
-      transition: background 0.2s;
+      padding: 10px 20px;
+      display: block;
+      transition: background 0.2s ease-in-out;
     }
 
-    .sidebar a:hover {
-      background: var(--accent);
+    .sidebar a:hover,
+    .sidebar a.active {
+      background-color: var(--sky);
     }
 
+    /* Main content */
     .main {
-      margin-left: 250px;
-      padding: 30px;
       flex: 1;
-      transition: margin-left 0.3s;
+      display: flex;
+      flex-direction: column;
     }
 
-    .sidebar.collapsed ~ .main {
-      margin-left: 60px;
+    .topbar {
+      background-color: var(--white);
+      padding: 15px 25px;
+      border-bottom: 1px solid #ccc;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
+
+    .topbar h1 {
+      color: var(--navy);
+    }
+
+    .content {
+      padding: 30px;
+      overflow-y: auto;
+    }
+
+    .card {
+      background: var(--white);
+      border: 1px solid #ccc;
+      border-left: 5px solid var(--sky);
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+
+    .card h3 {
+      margin-bottom: 10px;
+      color: var(--navy);
+    }
+
+    .logo {
+      height: 50px;
+      margin-left: 10px;
+    }
+
+    .sidebar img {
+      display: block;
+      margin: 0 auto 20px;
+      height: 60px;
+    }
+  </style>
+</head>
+<body>
+  <div class="sidebar">
+    <img src="https://res.cloudinary.com/dwxgkbuln/image/upload/v1750675472/pakisa_logistics_express_pty_ltd_logo-removebg-preview_kbuvzs.png" alt="Logo">
+    <h2>MM Courier</h2>
+    <a href="dashboard.html" class="active">📊 Dashboard</a>
+    <a href="daily-report.html">📦 Daily Deliveries</a>
+    <a href="age-analysis.html">⏳ Age Analysis</a>
+    <a href="scan-exceptions.html">⚠️ Scan Exceptions</a>
+    <a href="driver-performance.html">🚚 Driver Performance</a>
+    <a href="client-report.html">👥 Client Report</a>
+    <a href="pod-compliance.html">📝 POD Compliance</a>
+    <a href="billing-summary.html">💰 Billing Summary</a>
+    <a href="tripsheet-summary.html">🗂 Trip Sheet Summary</a>
+    <a href="index.html">🔒 Logout</a>
+  </div>
+
+  <div class="main">
+    <div class="topbar">
+      <h1>Welcome, Admin</h1>
+    </div>
+    <div class="content">
+      <div class="card">
+        <h3>Today’s Deliveries</h3>
+        <p>Total: --</p>
+      </div>
+      <div class="card">
+        <h3>Outstanding Parcels</h3>
+        <p>Total: --</p>
+      </div>
+      <div class="card">
+        <h3>Scan Exceptions</h3>
+        <p>Total: --</p>
+      </div>
+      <div class="card">
+        <h3>Driver Compliance</h3>
+        <p>Updated: --</p>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
