--- a/public/index.html
+++ b/public/index.html
@@ -1,160 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>MM Courier | Home</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>Dashboard | MM Courier</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     :root {
-      --primary: #0a2b52;
-      --accent: #409dbc;
-      --highlight: #cebd80;
-      --base: #ffffff;
+      --gold: #cebd80;
+      --navy: #0a2b52;
+      --sky: #409dbc;
+      --white: #ffffff;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: var(--base);
-      color: var(--primary);
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      height: 100vh;
+      overflow: hidden;
+      background-color: var(--white);
     }
 
-    header {
-      background-color: var(--primary);
-      padding: 20px;
-      color: white;
+    /* Sidebar */
+    .sidebar {
+      width: 220px;
+      background-color: var(--navy);
+      color: var(--white);
+      display: flex;
+      flex-direction: column;
+      padding: 20px 0;
+    }
+
+    .sidebar h2 {
       text-align: center;
+      margin-bottom: 20px;
+      color: var(--gold);
     }
 
-    header img {
-      height: 60px;
-      margin-bottom: 10px;
-    }
-
-    nav {
-      background-color: var(--accent);
-      padding: 10px;
-      text-align: center;
-    }
-
-    nav a {
-      color: white;
+    .sidebar a {
+      color: var(--white);
       text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
+      padding: 10px 20px;
+      display: block;
+      transition: background 0.2s ease-in-out;
     }
 
-    nav a:hover {
-      text-decoration: underline;
+    .sidebar a:hover,
+    .sidebar a.active {
+      background-color: var(--sky);
     }
 
-    .hero {
-      background: linear-gradient(rgba(10, 43, 82, 0.7), rgba(10, 43, 82, 0.7)),
-                  url('https://res.cloudinary.com/dwxgkbuln/image/upload/v1750675472/pakisa_logistics_express_pty_ltd_logo-removebg-preview_kbuvzs.png') no-repeat center;
-      background-size: contain;
-      text-align: center;
-      color: white;
-      padding: 80px 20px;
+    /* Main content */
+    .main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
     }
 
-    .hero h1 {
-      font-size: 40px;
-      margin-bottom: 10px;
+    .topbar {
+      background-color: var(--white);
+      padding: 15px 25px;
+      border-bottom: 1px solid #ccc;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
-    .hero p {
-      font-size: 18px;
+    .topbar h1 {
+      color: var(--navy);
     }
 
     .content {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-      text-align: center;
-    }
-
-    .content h2 {
-      color: var(--accent);
-      margin-bottom: 20px;
-    }
-
-    .tiles {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-      margin-top: 30px;
-    }
-
-    .tile {
-      background: #f4f4f4;
-      border: 2px solid var(--highlight);
-      border-radius: 10px;
       padding: 30px;
-      width: 250px;
-      transition: all 0.2s ease-in-out;
+      overflow-y: auto;
     }
 
-    .tile:hover {
-      transform: scale(1.05);
-      background: var(--highlight);
-      color: var(--primary);
+    .card {
+      background: var(--white);
+      border: 1px solid #ccc;
+      border-left: 5px solid var(--sky);
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     }
 
-    footer {
-      background-color: var(--primary);
-      color: white;
-      text-align: center;
-      padding: 15px;
-      font-size: 14px;
+    .card h3 {
+      margin-bottom: 10px;
+      color: var(--navy);
+    }
+
+    .logo {
+      height: 50px;
+      margin-left: 10px;
+    }
+
+    .sidebar img {
+      display: block;
+      margin: 0 auto 20px;
+      height: 60px;
     }
   </style>
 </head>
 <body>
+  <div class="sidebar">
+    <img src="https://res.cloudinary.com/dwxgkbuln/image/upload/v1750675472/pakisa_logistics_express_pty_ltd_logo-removebg-preview_kbuvzs.png" alt="Logo">
+    <h2>MM Courier</h2>
+    <a href="dashboard.html" class="active">📊 Dashboard</a>
+    <a href="daily-report.html">📦 Daily Deliveries</a>
+    <a href="age-analysis.html">⏳ Age Analysis</a>
+    <a href="scan-exceptions.html">⚠️ Scan Exceptions</a>
+    <a href="driver-performance.html">🚚 Driver Performance</a>
+    <a href="client-report.html">👥 Client Report</a>
+    <a href="pod-compliance.html">📝 POD Compliance</a>
+    <a href="billing-summary.html">💰 Billing Summary</a>
+    <a href="tripsheet-summary.html">🗂 Trip Sheet Summary</a>
+    <a href="index.html">🔒 Logout</a>
+  </div>
 
-  <header>
-    <img src="https://res.cloudinary.com/dwxgkbuln/image/upload/v1750675472/pakisa_logistics_express_pty_ltd_logo-removebg-preview_kbuvzs.png" alt="MM Courier Logo">
-    <h1>Welcome to MM Courier</h1>
-    <p>Courier | Logistics | Tracking | PODs</p>
-  </header>
-
-  <nav>
-    <a href="/dashboard.html">Dashboard</a>
-    <a href="/tripsheet.html">Tripsheets</a>
-    <a href="/scanin.html">Scan In</a>
-    <a href="/scanout.html">Scan Out</a>
-    <a href="/pod.html">Upload POD</a>
-    <a href="/login.html">Driver Login</a>
-  </nav>
-
-  <section class="hero">
-    <h1>Fast. Reliable. Professional.</h1>
-    <p>We connect South Africa, one parcel at a time.</p>
-  </section>
-
-  <section class="content">
-    <h2>What We Offer</h2>
-    <div class="tiles">
-      <div class="tile">
-        <h3>Real-Time Tracking</h3>
-        <p>Monitor all parcels received, scanned out, and delivered instantly.</p>
+  <div class="main">
+    <div class="topbar">
+      <h1>Welcome, Admin</h1>
+    </div>
+    <div class="content">
+      <div class="card">
+        <h3>Today’s Deliveries</h3>
+        <p>Total: --</p>
       </div>
-      <div class="tile">
-        <h3>Sign-on-Glass</h3>
-        <p>Drivers capture digital signatures for accountability and transparency.</p>
+      <div class="card">
+        <h3>Outstanding Parcels</h3>
+        <p>Total: --</p>
       </div>
-      <div class="tile">
-        <h3>Optimized Routes</h3>
-        <p>Plan your delivery routes efficiently using Google Maps integration.</p>
+      <div class="card">
+        <h3>Scan Exceptions</h3>
+        <p>Total: --</p>
+      </div>
+      <div class="card">
+        <h3>Driver Compliance</h3>
+        <p>Updated: --</p>
       </div>
     </div>
-  </section>
-
-  <footer>
-    © MM Courier | 10 Burry Koean Street, Jet Park, Boksburg, 1469 | 
-    <a href="mailto:ops1@pakisalogistics.co.za" style="color:#cebd80;">ops1@pakisalogistics.co.za</a> | 
-    011 397 1151 | <a href="https://www.pakisalogistics.co.za" target="_blank" style="color:#cebd80;">www.pakisalogistics.co.za</a>
-  </footer>
-
+  </div>
 </body>
 </html>
