--- a/public/scanin.html
+++ b/public/scanin.html
@@ -2,93 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Scan-In | MM Courier</title>
+  <title>Scan In | MM Courier</title>
+  <script src="https://unpkg.com/html5-qrcode"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 30px;
-      background-color: #f7f7f7;
-    }
-
-    h1 {
-      text-align: center;
-    }
-
-    #result {
-      margin-top: 20px;
-      font-size: 1.2rem;
-      font-weight: bold;
-      text-align: center;
-    }
-
-    input[type="text"] {
-      width: 100%;
-      padding: 15px;
-      font-size: 1.2rem;
-      margin-top: 20px;
-      box-sizing: border-box;
-    }
-
-    .success {
-      color: green;
-    }
-
-    .error {
-      color: red;
-    }
-
-    .logo {
-      display: block;
-      margin: 0 auto 20px;
-      height: 70px;
-    }
+    body { font-family: Arial; padding: 20px; background: #f9f9f9; }
+    h1 { color: #0a2b52; text-align: center; }
+    #reader { width: 100%; margin: 20px auto; max-width: 400px; }
+    input, button { padding: 10px; width: 100%; margin-top: 10px; }
+    .message { text-align: center; font-weight: bold; margin-top: 15px; }
   </style>
 </head>
 <body>
+  <h1>📦 Scan In Parcel</h1>
+  
+  <div id="reader"></div>
+  <input type="text" id="trackingNumber" placeholder="Tracking Number" readonly />
+  <button onclick="scanParcel()">✅ Scan In</button>
 
-  <!-- Logo -->
-  <img
-    src="https://res.cloudinary.com/dwxgkbuln/image/upload/v1750675472/pakisa_logistics_express_pty_ltd_logo-removebg-preview_kbuvzs.png"
-    alt="MM Courier Logo"
-    class="logo"
-  >
-
-  <h1>📦 Parcel Scan-In</h1>
-
-  <input type="text" id="trackingInput" placeholder="Scan or enter tracking number" autofocus>
-
-  <div id="result"></div>
+  <div class="message" id="message"></div>
 
   <script>
-    const input = document.getElementById('trackingInput');
-    const result = document.getElementById('result');
+    const message = document.getElementById('message');
 
-    input.addEventListener('keypress', async function (e) {
-      if (e.key === 'Enter') {
-        const trackingNumber = input.value.trim();
-        if (!trackingNumber) return;
+    function scanParcel() {
+      const trackingNumber = document.getElementById('trackingNumber').value;
+      if (!trackingNumber) {
+        message.textContent = '⚠️ No tracking number scanned.';
+        return;
+      }
 
-        try {
-          const res = await fetch(`/api/parcels/scanin/${trackingNumber}`, {
-            method: 'PUT'
-          });
-
-          const data = await res.json();
-
-          if (data.success) {
-            result.textContent = '✅ Parcel scanned in successfully.';
-            result.className = 'success';
-          } else {
-            result.textContent = '❌ ' + data.message;
-            result.className = 'error';
-          }
-        } catch (err) {
-          result.textContent = '❌ Server error.';
-          result.className = 'error';
+      fetch(`/api/parcels/scanin/${trackingNumber}`, {
+        method: 'PUT'
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (data.success) {
+          message.textContent = '✅ Parcel scanned in successfully!';
+        } else {
+          message.textContent = `❌ ${data.message}`;
         }
+      })
+      .catch(() => {
+        message.textContent = '❌ Failed to scan in parcel.';
+      });
+    }
 
-        input.value = '';
-        input.focus();
+    const html5QrCode = new Html5Qrcode("reader");
+    Html5Qrcode.getCameras().then(cameras => {
+      if (cameras && cameras.length) {
+        html5QrCode.start(
+          { facingMode: "environment" }, // Rear camera
+          { fps: 10, qrbox: 250 },
+          qrCodeMessage => {
+            document.getElementById("trackingNumber").value = qrCodeMessage;
+            html5QrCode.stop(); // optional: auto-stop after first scan
+          }
+        );
       }
     });
   </script>
